--- a/angular.json
+++ b/angular.json
@@ -3,27 +3,31 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tutosphere": {
+    "delisa": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tutosphere",
+            "outputPath": "dist/delisa",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -50,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tutosphere:build"
+            "browserTarget": "delisa:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tutosphere:build:production"
+              "browserTarget": "delisa:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tutosphere:build"
+            "browserTarget": "delisa:build"
           }
         },
         "test": {
@@ -72,12 +76,12 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/favicon.png"
             ]
           }
         },
@@ -95,7 +99,7 @@
         }
       }
     },
-    "tutosphere-e2e": {
+    "delisa-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "tutosphere:serve"
+            "devServerTarget": "delisa:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tutosphere:serve:production"
+              "devServerTarget": "delisa:serve:production"
             }
           }
         },
@@ -123,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "tutosphere"
+  "defaultProject": "delisa"
 }
